major (#88): Finished auth implementation for the SDS
