# solardoc/phoenix-server/priv/static/swagger.json
@@ -18,7 +18,7 @@
       "properties": {
         "date": {
           "description": "The current date in milliseconds",
-          "example": 1710079058281,
+          "example": 1710184706261,
           "type": "integer"
         },
         "greeting": {
@@ -181,12 +181,17 @@
     "UserToken": {
       "description": "A user token",
       "properties": {
+        "expires_at": {
+          "description": "Token expiration date in milliseconds",
+          "type": "integer"
+        },
         "token": {
           "description": "Users token",
           "type": "string"
         }
       },
       "required": [
+        "expires_at",
         "token"
       ],
       "title": "UserToken",
